<resources>
    <string name="app_name">Mobile_app</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">EM</string>
    <string name="title_dashboard">CID</string>
    <string name="title_notifications">DI</string>
    <string name="title_notifications2">WB</string>
    <string name="title_notifications3">OPP</string>
    <string name="tab">\u0009</string>
    <string name="app_name2">CustomListView</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="ranklabel">"Rank : "</string>
    <string name="countrylabel">"Country : "</string>
    <string name="populationlabel">"Population : "</string>
    <string name="login_password">Password</string>
    <string name="login_signin">      </string>
    <string name="login_username">Username</string>
    <string name="login_login">Login</string>
    <string name="btLogin">Forgot Password?</string>
    <string name="login_forgot">Forgot Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
