<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/botMenu_environment"
        android:icon="@drawable/env"
        android:title="@string/title_home" />

    <item
        android:id="@+id/botMenu_community"
        android:icon="@drawable/development"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/botMenu_diversity"
        android:icon="@drawable/diversity"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/botMenu_wellbeing"
        android:icon="@drawable/wellbeing"
        android:title="@string/title_notifications2" />

    <item
        android:id="@+id/botMenu_operating"
        android:icon="@drawable/operating"
        android:title="@string/title_notifications3" />
</menu>
