<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/paint"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fujitsu.mobile_application.LoginScreen"
>
<ImageView
android:layout_height="100dp"
app:srcCompat="@drawable/griplogo"
android:id="@+id/login_logo"
android:layout_width="200dp"
tools:layout_constraintTop_creator="1"
tools:layout_constraintRight_creator="1"
app:layout_constraintRight_toRightOf="parent"
android:layout_marginTop="5dp"
app:layout_constraintTop_toBottomOf="@+id/login_sign_in_text"
tools:layout_constraintLeft_creator="1"
app:layout_constraintLeft_toLeftOf="parent" />

<TextView
android:text="@string/login_signin"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:id="@+id/login_sign_in_text"
android:textColor="@android:color/white"
android:textSize="50sp"
tools:layout_constraintTop_creator="1"
tools:layout_constraintRight_creator="1"
android:layout_marginEnd="24dp"
app:layout_constraintRight_toRightOf="@+id/login_logo"
android:layout_marginTop="39dp"
app:layout_constraintTop_toTopOf="parent"
android:layout_marginRight="13dp" />

<EditText
android:layout_width="206dp"
android:layout_height="50dp"
android:ems="10"
android:id="@+id/etPassword"
android:hint="@string/login_password"
android:background="@color/transpa"
android:textColor="@android:color/white"
android:inputType="textPassword"
android:layout_marginStart="16dp"
app:layout_constraintLeft_toLeftOf="parent"
android:layout_marginEnd="16dp"
app:layout_constraintRight_toRightOf="parent"
android:layout_marginTop="20dp"
app:layout_constraintTop_toBottomOf="@+id/etUsername" />

<EditText
android:layout_width="206dp"
android:layout_height="50dp"
android:inputType="textPersonName"
android:ems="10"
android:id="@+id/etUsername"
android:hint="@string/login_username"
android:background="@color/transpa"
android:textColor="@android:color/white"
android:layout_marginTop="58dp"
app:layout_constraintTop_toBottomOf="@+id/login_logo"
android:layout_marginStart="16dp"
app:layout_constraintLeft_toLeftOf="parent"
android:layout_marginEnd="16dp"
app:layout_constraintRight_toRightOf="parent" />

<Button
android:text="@string/login_login"
android:layout_width="0dp"
android:layout_height="wrap_content"
android:id="@+id/btLogin"
app:layout_constraintLeft_toLeftOf="@+id/etPassword"
app:layout_constraintRight_toRightOf="@+id/etPassword"
android:layout_marginTop="45dp"
app:layout_constraintTop_toBottomOf="@+id/etPassword"
android:background="@drawable/login"
android:textColor="@android:color/white"
android:textStyle="normal|bold"
android:textSize="16sp"
app:layout_constraintHorizontal_bias="0.0"
android:onClick="Onclick"/>


    <RelativeLayout
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginStart="32dp"
app:layout_constraintLeft_toLeftOf="parent"
app:layout_constraintBottom_toBottomOf="parent"
android:layout_marginBottom="8dp"
android:id="@+id/fb_relative">

</RelativeLayout>

<RelativeLayout
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginEnd="24dp"
app:layout_constraintRight_toRightOf="parent"
app:layout_constraintBottom_toBottomOf="parent"
android:layout_marginBottom="24dp"
android:id="@+id/twitter_relative"></RelativeLayout>






    </android.support.constraint.ConstraintLayout>
